# MultiThreaded-TCP-Chat-Server-CPP-ThreadPool-RoomBased

./: .gitignore  CMakeLists.txt  CODEBASE_EXPLANATION.md  DEMO_GUIDE.bat  README.md  Reference.md  build.bat  build_mingw.bat  chat_room.cpp  chat_room.h  client  client.cpp  compile.sh  connection_manager.cpp  connection_manager.h  iocp_server.cpp  iocp_server.h  message_store.cpp  message_store.h  run_demo.bat  server  server.cpp  sockutil.cpp  sockutil.h  test_apply.cpp  thread_pool.cpp  thread_pool.h  win32_compat.h
